--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build & Deploy
 
 on:
   push:
@@ -8,55 +8,41 @@ on:
 jobs:
   build:
     name: Build and analyze
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
-
         with:
-          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-
+          fetch-depth: 0
       - name: Set up JDK 21
-
         uses: actions/setup-java@v4
-
         with:
           java-version: 21
-
-          distribution: "zulu" # O puedes usar 'temurin' si prefieres otra distro de OpenJDK
-
+          distribution: "zulu"
       - name: Cache SonarQube packages
-
         uses: actions/cache@v4
-
         with:
           path: ~/.sonar/cache
-
           key: ${{ runner.os }}-sonar
-
           restore-keys: ${{ runner.os }}-sonar
-
       - name: Cache Maven packages
-
         uses: actions/cache@v4
-
         with:
           path: ~/.m2
-
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-
           restore-keys: ${{ runner.os }}-m2
-
       - name: Build and analyze
-
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-
           -Dsonar.projectKey=academiambravo_AMB_DASHBOARD_46d4e516-5ee0-4456-9119-92077033bb44 \
-
           -Dsonar.projectName='AMB_DASHBOARD'
+
+  deploy:
+    name: Deploy
+    needs: build # Esto dice que 'deploy' depende de 'build'
+    runs-on: ubuntu-latest
+    if: ${{ needs.build.result == 'success' }} # Solo si 'build' fue OK
+    steps:
+      - name: Echo deploy (ficticio, pon aquí tu deploy real)
+        run: echo "¡Desplegando porque Quality Gate ha pasado!"
