--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
 
           -Dsonar.host.url=$SONAR_HOST_URL \
 
-          -Dsonar.login=$SONAR_TOKEN
+          -Dsonar.login=$SONAR_TOKEN \
 
           -Dsonar.branch.name=${{ github.ref_name }}
 
